feat: 统一玩家身份识别，密码页分组复制，清理本地调试状态